--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   file_picker: ^8.0.6
   pdf: ^3.11.0
   syncfusion_flutter_pdfviewer: ^26.1.41
+  shared_preferences: ^2.2.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
