--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^26.1.41
   shared_preferences: ^2.2.3
   provider: ^6.1.2
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
