--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fl_chart: ^0.68.0
   cloud_firestore: ^5.1.0
   firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
