--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
   fluttertoast: ^8.2.6
+  firebase_storage: ^12.1.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
