--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   pdf_render: ^1.4.7
   syncfusion_flutter_pdf: ^26.1.42
   dart_openai: ^5.1.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
