--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   syncfusion_flutter_pdf: ^26.1.42
   dart_openai: ^5.1.0
   path_provider: ^2.1.3
+  docx_template: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/templates.docx
+    - assets/template.docx
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
