--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,14 @@ dependencies:
   path: ^1.9.0
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
-  pdf_render: ^1.4.7
   syncfusion_flutter_pdf: ^26.1.42
   dart_openai: ^5.1.0
   path_provider: ^2.1.3
   docx_template: ^0.4.0
+  langchain: ^0.7.4
+  langchain_openai: ^0.7.0
+  langchain_core: ^0.3.4
+  langchain_community: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    # - .env
+    - .env
     - assets/templates.docx
     - assets/template.docx
 
