--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dart_openai: ^5.1.0
   path_provider: ^2.1.3
   docx_template: ^0.4.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +81,9 @@ flutter:
     # - .env
     - assets/templates.docx
     - assets/template.docx
+    - assets/carousel1.png
+    - assets/carousel2.png
+    - assets/carousel3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
