--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   langchain_openai: ^0.7.0
   langchain_core: ^0.3.4
   langchain_community: ^0.3.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
