--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,8 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-    - assets/templates.docx
-    - assets/template.docx
+    - assets/templates - 50 soal.docx
     - assets/carousel1.png
     - assets/carousel2.png
     - assets/carousel3.png
