--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fl_chart: ^0.68.0
   cloud_firestore: ^5.1.0
   firebase_core: ^3.2.0
+  firebase_app_check: ^0.3.0
   firebase_auth: ^5.1.2
   fluttertoast: ^8.2.6
   firebase_storage: ^12.1.1
