--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
     - assets/templates - 50 soal.docx
     - assets/carousel_Pertama.png
     - assets/carousel_Kedua.png
@@ -91,7 +90,7 @@ flutter:
     - assets/carousel_Keempat.png
     - assets/carousel_Kelima.png
     - assets/carousel_Keenam.png
-    - assets/educraft_logo_finish.png
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
