--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,6 @@ dependencies:
   dart_openai: ^5.1.0
   path_provider: ^2.1.3
   docx_template: ^0.4.0
-  langchain: ^0.7.4
-  langchain_openai: ^0.7.0
-  langchain_core: ^0.3.4
-  langchain_community: ^0.3.0
   loading_animation_widget: ^1.2.1
   intl: ^0.19.0
 
@@ -91,7 +87,7 @@ flutter:
     - assets/carousel_Kelima.png
     - assets/carousel_Keenam.png
     - assets/logo.png
-
+    - assets/educraft_logo_finish.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
